# RTR2014

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  profile.txt
data/: demo.ini  democam.json
data/material/: brick_1_diffuse.ini  brick_1_diffuse.json  brick_1_diffuse_normal.ini  brick_1_diffuse_normal_specular.ini  brick_1_diffuse_specular.ini  brick_repeated_1_diffuse.ini  brick_repeated_1_diffuse_normal.ini  brick_repeated_1_diffuse_normal_specular.ini  brick_repeated_1_diffuse_specular.ini  cave_0.ini  duck_1_diffuse.ini  gear.ini  material_test_0.ini  metal_1_diffuse_specular.ini  moss_1_diffuse.ini  moss_1_diffuse_normal_specular.ini  moss_1_diffuse_specular.ini  skybox.ini  stone_1_diffuse_normal.ini  stone_1_diffuse_normal_specular.ini  stone_repeated_1_diffuse_normal.ini  stone_repeated_1_diffuse_normal_specular.ini  sword.ini  test_1.ini
data/mesh/: cave.mtl  cave1.mtl  cube.oni  gear.mtl
data/models/: cave.blend  cave.blend1  gear.blend  skybox.blend  sphere_with_missing_faces.blend
data/scene/: all.json  cave_0.json  cave_1.json  directional_light_test_1.json  glow_test_1.json  light_test_1.json  light_test_2.json  test_1.json
data/scene/test/: animation_test_1.json  cave_0.json  cave_1.json  directional_light_1.json  duck_1.json  gear.json  point_light_test.json
data/shader/: DefaultShader.ini  compose_screenquad.ini  deferred_directional_light_pass.ini  deferred_geometry_pass.ini  display_pass.ini  forward_test_0.ini  shader_display_overlay.ini  shader_display_text.ini  shader_test_0.ini  shadow_cube_pass.ini  shadow_map_pass.ini
data/shader/debug/: visualize_depth_buffer_pass.ini
data/shader/deferred/: illumination_pass.ini  point_light_pass.ini
data/shader/post/: depth_of_field_pass.ini  fog_pass.ini  fxaa_pass.ini  gauss_blur_horizontal.ini  gauss_blur_vertical.ini  god_ray_1_pass.ini  god_ray_2_pass.ini
data/shader/postprocess/: gauss_blur_horizontal.ini
data/shadersource/: display_overlay_fragment.glsl  display_overlay_vertex.glsl  display_pass_fragment.glsl  display_text_fragment.glsl  display_text_vertex.glsl  fragment_passthrough.glsl  fragment_singletexture.glsl  fragment_test.glsl  geometry_screenquad.glsl  vertex_empty.glsl  vertex_passthrough.glsl
data/shadersource/debug/: visualize_depth_buffer_fragment.glsl
data/shadersource/deferred/: directional_light_pass_fragment.glsl  geometry_pass_fragment.glsl  geometry_pass_vertex.glsl  illumination_pass_fragment.glsl  point_light_pass_fragment.glsl  point_light_pass_vertex.glsl  shadow_cube_pass_fragment.glsl  shadow_cube_pass_vertex.glsl  shadow_map_pass_fragment.glsl  shadow_map_pass_vertex.glsl
data/shadersource/post/: default_fragment.glsl  depth_of_field_fragment.glsl  fog_fragment.glsl  fog_vertex.glsl  fxaa_fragment.glsl  gauss_blur_horizontal_fragment.glsl  gauss_blur_horizontal_frgament.glsl  gauss_blur_vertical_fragment.glsl  god_ray_1_fragment.glsl  god_ray_2_fragment.glsl  screenquad_geometry.glsl  test_fragment.glsl
log/: dummy.txt
src/animation/: Animation.h  CAnimationWorld.cpp  CAnimationWorld.h  CMovementController.cpp  CMovementController.h  CRotationController.cpp  CRotationController.h  IAnimationController.cpp  IAnimationController.h
src/command/: CConsole.cpp  CConsole.h  ICommandHandler.cpp  ICommandHandler.h  IConsole.cpp  IConsole.h
src/command/console/: CConsole.cpp  CConsole.h
src/command/handler/: CPrintHandler.cpp  CPrintHandler.h
src/debug/: CDebugInfo.cpp  CDebugInfo.h  CLogger.cpp  CLogger.h  ILogListener.cpp  ILogListener.h  Log.h
src/demo/: CCameraController.cpp  CCameraController.h  RTRDemo.cpp  RTRDemo.h  main.cpp
src/graphics/: ATransformable.cpp  ATransformable.h  CDebugInfoDisplay.cpp  CDebugInfoDisplay.h  Graphics.h  ICamera.cpp  ICamera.h  IGraphicsResourceManager.cpp  IGraphicsResourceManager.h  IGraphicsSystem.cpp  IGraphicsSystem.h  IRenderer.cpp  IRenderer.h  IResourceListener.h  IResourceManager.h  IScene.cpp  IScene.h  ISceneQuery.cpp  ISceneQuery.h  IWindow.cpp  IWindow.h  ResourceConfig.h  SceneConfig.h
src/graphics/camera/: CFirstPersonCamera.cpp  CFirstPersonCamera.h  CFreeCamera.cpp  CFreeCamera.h  CLookAtCamera.cpp  CLookAtCamera.h  IControllableCamera.cpp  IControllableCamera.h  TransformUtils.cpp  TransformUtils.h
src/graphics/renderer/: ARenderer.cpp  ARenderer.h  CCamera.h  CDeferredRenderer.cpp  CDeferredRenderer.h  CForwardRenderer.cpp  CForwardRenderer.h  CFrameBuffer.cpp  CFrameBuffer.h  CMaterial.cpp  CMaterial.h  CMesh.cpp  CMesh.h  CRenderBuffer.cpp  CRenderBuffer.h  CRenderer.cpp  CRenderer.h  CSampler.cpp  CSampler.h  CShader.cpp  CShader.h  CShaderObject.cpp  CShaderObject.h  CShaderProgram.cpp  CShaderProgram.h  CTexture.cpp  CTexture.h  CTransformer.cpp  CTransformer.h  MaterialConfig.h  SRenderRequest.cpp  SRenderRequest.h  TShaderObject.h
src/graphics/resource/: CGraphicsResourceManager.cpp  CGraphicsResourceManager.h  CMaterial.cpp  CMaterial.h  CMesh.cpp  CMesh.h  CResourceManager.cpp  CResourceManager.h  CShaderProgram.cpp  CTexture.h  (+10 more)
src/input/: IInputHandler.cpp  IInputHandler.h  IInputListener.cpp  IInputListener.h  IInputProvider.cpp  IInputProvider.h
src/io/: CIniFile.cpp  CIniFile.h  CObjModelLoader.cpp  CObjModelLoader.h  CSceneLoader.cpp  CSceneLoader.h  CShaderPreprocessor.cpp  CShaderPreprocessor.h  CTextResourceFile.cpp  CTextResourceFile.h  JsonDeserializer.cpp  JsonDeserializer.h  StdStreamSerializer.cpp  StdStreamSerializer.h
src/renderer/: ALight.cpp  ALight.h  CCamera.cpp  CCamera.h  CDirectionalLight.cpp  CDirectionalLight.h  CMaterial.h  CMesh.cpp  CMesh.h  CRenderer.cpp  CRenderer.h  CTexture.cpp  CTexture.h  CVertexBuffer.cpp  CVertexBuffer.h
src/resource/: CResourceManager.cpp  CResourceManager.h  IResourceListener.cpp  IResourceLoader.cpp  IResourceLoader.h  IResourceManager.cpp  IResourceManager.h  Resource.cpp  Resource.h  ResourceConfig.h
src/sampler/: Interpolation.cpp  Interpolation.h  TSampler.h
src/scene/: CScene.cpp  CScene.h  CSceneObject.cpp  CSceneObject.h
src/shaders/: Shader.h  TShader.h
src/util/: TimeStamp.cpp  TimeStamp.h  Util.h
(+45 files in other folders)
